force-app/main/default/objects/Disbursal_Repayment_Detail__c/Disbursal_Repayment_Detail__c.object-meta.xml
<CustomObject>
    <label>Disbursal Repayment Detail</label>
    <nameField>
        <displayFormat>DRD-{0000}</displayFormat>
        <label>Disbursal Repayment Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursal Repayment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>