force-app/main/default/objects/Disbursal_Repayment_Detail__c/fields/Disbursal__c.field-meta.xml
<CustomField>
    <fullName>Disbursal__c</fullName>
    <label>Disbursal</label>
    <referenceTo>Disbursal__c</referenceTo>
    <relationshipLabel>Disbursal Repayment Details</relationshipLabel>
    <relationshipName>Disbursal_Repayment_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>