force-app/main/default/objects/Disbursal_Repayment_Detail__c/fields/NACH_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>NACH_Account_Number__c</fullName>
    <label>NACH Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>