force-app/main/default/objects/Disbursal_Repayment_Detail__c/fields/NACH_IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>NACH_IFSC_Code__c</fullName>
    <label>NACH IFSC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>