force-app/main/default/objects/Disbursal_Repayment_Detail__c/fields/NACH_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>NACH_Party_Name__c</fullName>
    <label>NACH Party Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>