force-app/main/default/objects/Disbursal_Repayment_Detail__c/fields/NACH_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>NACH_Party_Type__c</fullName>
    <label>NACH Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>